# threshold-akem

./: .gitignore  CMakeLists.txt  README.md  build_and_run.ps1  results32.csv  results53.csv
experiments/: run_authkem_comparison.cpp
include/rmtls_threshold_mlkem/: assistant.hpp  authkem_baseline.hpp  authkem_comparison.hpp  combiner.hpp  front_service.hpp  mlkem_adapter.hpp  public_log.hpp  sharing.hpp  transcript.hpp  types.hpp
src/: assistant.cpp  authkem_baseline.cpp  combiner.cpp  front_service.cpp  mlkem_adapter.cpp  mlkem_native_bridge.c  mlkem_native_bridge.h  public_log.cpp  public_output_safety.hpp  sharing.cpp  transcript.cpp
tests/: test_authkem_comparison.cpp  test_leakage_and_branch_hiding.cpp  test_production_api.cpp  test_real_mlkem512.cpp  test_sharing.cpp  test_stage_a_inner_decryption.cpp  test_transcript_admission.cpp
